# carlos

./: .dockerignore  .env.example  .gitignore  .monorepo_manager.yaml  404.html  LICENSE  Makefile  README.md  crontab  docker-compose-initiate.yaml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/workflows/: clean-gh-actions-cache.yml  deploy-docs.yml  deploy-server.yml  enforce-branch-up-to-date.yml  generate-monorepo-manager.yml  lib-py_dev_dependencies-ci.yml  lib-py_edge_device-ci.yml  lib-py_edge_interface-ci.yml  lib-py_edge_server-ci.yml  lib-py_monorepo_manager-ci.yml  monorepo-manager.yml  pages-build.yml  pr-assign-author.yml  pr-cache-cleanup.yml  pr-enforce-branch-up-to-date.yml  run-monorepo-manager.yml  services-api-ci.yml  services-device-ci.yml  (+9 more)
.run/: Carlos API.run.xml  Carlos DB - Test DB.run.xml  Carlos Device - CLI.run.xml  Carlos Device.run.xml  Database.run.xml  Migrate DB.run.xml  Monorepo Manager.run.xml  _lib_py_dev_dependencies.run.xml  _lib_py_edge_device.run.xml  _lib_py_edge_interface.run.xml  _lib_py_edge_server.run.xml  _services_api.run.xml  _services_device.run.xml  frontend _ dev.run.xml  frontend _ lint_fix.run.xml  frontend _ test_unit_watch.run.xml  frontend _ tsc.run.xml
_stylesheets/: carlos.css
branding/: README.md  carlos.css
developer-guide/: index.html
docs/: docs.md  index.md  links.md
installation/: index.html
lib/py_dev_dependencies/: CHANGELOG.md  Makefile  README.md  pyproject.toml
lib/py_dev_dependencies/devtools/: context_manager.py  context_manager_test.py  converter.py  converter_test.py  docker.py  docker_test.py  networking.py  networking_test.py  testing.py  testing_test.py
lib/py_edge_device/: .gitignore  CHANGELOG.md  README.md  alembic.ini  conftest.py  pyproject.toml
lib/py_edge_device/carlos/edge/: __init__.py
lib/py_edge_device/carlos/edge/device/: __init__.py  communication.py  communication_test.py  config.py  config_test.py  constants.py  driver_manager.py  retry.py  retry_test.py  runtime.py  update.py  utils.py  utils_test.py
lib/py_edge_device/carlos/edge/device/driver/: _dhtxx.py  _utils.py  device_metrics.py  dht11.py  dht22.py  relay.py  sht30.py  si1145.py
lib/py_edge_device/carlos/edge/device/io/: __init__.py  _dhtxx.py  device_metrics.py  dht11.py  dht22.py  relay.py  si1145.py
lib/py_edge_device/carlos/edge/device/protocol/: __init__.py  _gpio_mock.py  gpio.py  i2c.py
lib/py_edge_device/carlos/edge/device/storage/: api_token.py  api_token_test.py  blackbox.py  blackbox_test.py  conftest.py  connection.py  connection_test.py  constants.py  exceptions.py  migration.py  orm.py  timeseries_data.py  timeseries_data_test.py  timeseries_index.py  timeseries_index_test.py
lib/py_edge_device/carlos/edge/device/storage/_migrations/: env.py
lib/py_edge_device/carlos/edge/device/storage/_migrations/versions/: 2024-04-23_ca8d6787181e_add_token_table.py  2024-04-25_476f88fe4d1b_add_tables_to_store_timeseries.py
lib/py_edge_device/tests/: storage.db
lib/py_edge_device/tests/test_data/: __init__.py  device_config
lib/py_edge_interface/: CHANGELOG.md  README.md  pyproject.toml
lib/py_edge_interface/carlos/edge/interface/: __init__.py  data_directory.py  data_directory_test.py  endpoint.py  messages.py  messages_test.py  plugin_pytest.py  protocol.py  protocol_test.py  types.py  units.py  units_test.py  utils.py
lib/py_edge_interface/carlos/edge/interface/device/: __init__.py  config.py  driver.py  driver_config.py  driver_config_test.py  driver_test.py  io.py  peripheral.py
lib/py_edge_server/: CHANGELOG.md  README.md  conftest.py  pyproject.toml
lib/py_edge_server/carlos/edge/server/: connection.py  connection_test.py  constants.py  device_handler.py  device_handler_test.py  token.py  token_test.py
lib/py_monorepo_manager/: CHANGELOG.md  Makefile  README.md  pyproject.toml
lib/py_monorepo_manager/monorepo_manager/: cli.py  cli_test.py  conftest.py  graph.py  graph_test.py  jinja_environment.py  loading.py  paths.py  project.py  project_test.py  template_renderer.py
lib/py_monorepo_manager/monorepo_manager/language/: __init__.py  javascript.py  rust.py
lib/py_monorepo_manager/monorepo_manager/language/python/: __init__.py  project.py  project_test.py
lib/py_monorepo_manager/monorepo_manager/language/python/templates/: Makefile.jinja2  __init__.py  ci.install.yml.jinja2  ci.install_workflow.yml.jinja2  ci.yml.jinja2  generate-monorepo-manager.yml.jinja2  github-action-python.yml.jinja2  poetry.toml.jinja2  run_cli_ci.yml.jinja2
lib/py_monorepo_manager/monorepo_manager/templates/: __init__.py  update_all_python_venvs.sh.jinja2
resources/: carlos_typo_logo.pxd
scripts/: cron_job.sh  install_server.sh  server-update.sh  update_all_python_venvs.sh
search/: search_index.json
services/api/: .env.example  Dockerfile  Makefile  README.md  conftest.py  prestart.sh  pyproject.toml  start-uvicorn.sh
services/api/carlos/api/: __main__.py  app.py  app_factory.py  config.py  config_test.py  logging_patch.py
services/api/carlos/api/depends/: authentication.py  context.py  database.py
services/api/carlos/api/params/: query.py
services/api/carlos/api/routes/: __init__.py  conftest.py  data_routes.py  data_routes_test.py  device_server_routes.py  devices_routes.py  devices_routes_test.py  edge_routes.py  health_routes.py  health_routes_test.py  signals_routes.py  signals_routes_test.py
services/api/carlos/api/routes/device_server_routes/: __init__.py  device_server_routes.py  device_server_routes_test.py  protocol.py  state.py
services/api/carlos/api/utils/: data_reduction.py  data_reduction_test.py
services/api/scripts/: generate_openapi.py
services/api/testing/: expectations.py
services/device/: .gitignore  Makefile  carlos_device.service  install-service.sh  pyproject.toml
services/device/device/: __main__.py  connection.py  connection_test.py  run.py  sentry.py  websocket.py
services/device/device/cli/: __init__.py  __main__.py  config.py  config_test.py
usage/: index.html
(+155 files in other folders)
