[tool.poetry]
name = "carlos.edge.server"
version = "0.1.3"
description = "The library for the edge server of the carlos project."
authors = ["Felix Fanghanel"]
license = "MIT"
readme = "README.md"
packages = [{include = "carlos"}]
exclude = ["**/*_test.py", "**/conftest.py", "**/test/**"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
"carlos.edge.interface" = {path = "../py_edge_interface"}
"carlos.database" = {path = "../py_carlos_database"}
fastapi = "^0.110.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
"devtools" = {path = "../py_dev_dependencies", develop = true}
"carlos.edge.interface" = {path = "../py_edge_interface", develop = true}
"carlos.database" = {path = "../py_carlos_database", develop = true}
"carlos.edge.device" = {path = "../py_edge_device", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.1.3"
commit = true
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<prerelease>[a-z0-9\\.]+))?"
serialize = [
	"{major}.{minor}.{patch}-{prerelease}",
	"{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = ['.*_test\.py$']

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "def __hash__",
    # Don't complain if imports are not covered:
    "^import .*",
    "^from .* import .*",
    "__all__ = .*",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about guard clauses
    "if __name__ == .__main__.:",
]
omit = [
    # omit all tests
    "*_test.py",
]
