[tool.poetry]
name = "carlos.api"
version = "0.1.0"
description = "The API for the Carlos project"
authors = ["Felix Fanghänel"]
readme = "README.md"
license = "MIT"
packages = [{include = "carlos"}]
exclude = ["**/*_test.py", "**/conftest.py", "**/test/**"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
"carlos.database" = {path = "../../lib/py_carlos_database"}
"carlos.edge.interface" = {path = "../../lib/py_edge_interface"}
"carlos.edge.device" = {path = "../../lib/py_edge_device"}
"carlos.edge.server" = {path = "../../lib/py_edge_server"}
# Web
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = ">=0.23.1,<1.0.0"
# Database
sqlalchemy = {extras = ["mypy"], version = "^2.0.0"}
asyncpg = "^0.29.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
"devtools" = {path = "../../lib/py_dev_dependencies", develop = true}
"carlos.database" = {path = "../../lib/py_carlos_database", develop = true}
"carlos.edge.interface" = {path = "../../lib/py_edge_interface", develop = true}
"carlos.edge.device" = {path = "../../lib/py_edge_device", develop = true}
"carlos.edge.server" = {path = "../../lib/py_edge_server", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<prerelease>[a-z0-9\\.]+))?"
serialize = [
	"{major}.{minor}.{patch}-{prerelease}",
	"{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = ['.*_test\.py$']

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "def __hash__",
    # Don't complain if imports are not covered:
    "^import .*",
    "^from .* import .*",
    "__all__ = .*",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about guard clauses
    "if __name__ == .__main__.:",
]
omit = [
    "__main__.py",
    # omit all tests
    "*_test.py",
]
